# musrv

./: .dockerignore  Cargo.toml  Dockerfile  README.md  install.sh
.github/workflows/: ci.yml  docker.yml  release.yml  test.yml
src/: lib.rs  library.rs  main.rs  path_utils.rs  playlist.rs  server.rs
src/server/: helpers.rs  mod.rs  routes.rs  state.rs  types.rs
src/static/: app.css  app.js  index.html  manifest.webmanifest
tests/: server_routes.rs
