[package]
name = "musrv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"
urlencoding = "2"
tower-http = { version = "0.5", features = ["fs", "trace"] }
minijinja = "1"
serde = { version = "1", features = ["derive"] }
local-ip-address = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
