[package]
name = "musrv"
version = "0.6.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"
urlencoding = "2"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
local-ip-address = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"
tower = "0.5"
arc-swap = "1"
rand = "0.8"
bytes = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
qrcode = "0.12"
lofty = "0.18"
blake3 = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
